--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,7 @@
+* {
+    box-sizing: border-box;
+}
 body {
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -27,7 +29,6 @@ input {
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-sizing: border-box;
     font-size: 16px;
 }
 
