--- a/Style.css
+++ b/Style.css
@@ -2,20 +2,20 @@
     box-sizing: border-box;
 }
 body {
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
     background-color: #f2f2f2;
     font-family: Arial, sans-serif;
 }
 
-.login-container {
+.loginContainer {
     background-color: #ffffff;
     padding: 40px;
+    margin: auto;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     text-align: center;
+    max-width: 600px;
+    width: 100%;
 }
 
 .input-group {
@@ -48,20 +48,16 @@ button:hover {
     background-color: #45a049;
 }
 
-.login-container h2 {
+.loginContainer h2 {
     margin-bottom: 20px;
     font-size: 28px;
     color: #333;
 }
 
-.login-container a {
+.loginContainer a {
     color: #4caf50;
     text-decoration: none;
     font-weight: bold;
-}
-
-.login-container a:hover {
-    text-decoration: underline;
 }
 .error-message {
     color: #ff0000;
